--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -62,7 +62,8 @@ jobs:
     if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
       github.event.pull_request.draft == false &&
       needs.sgl-kernel-check-changes.outputs.src == 'true'
-    runs-on: sgl-kernel-build-node
+#    runs-on: sgl-kernel-build-node
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
@@ -74,25 +75,30 @@ jobs:
             cuda-version: "12.9"
     name: Build Wheel (CUDA ${{ matrix.cuda-version }})
     steps:
-      - name: Cleanup
-        run: |
-          sudo rm -rf $GITHUB_WORKSPACE/* || true
-
-      - uses: actions/checkout@v4
-        with:
-          submodules: "recursive"
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
+#      - name: Cleanup
+#        run: |
+#          sudo rm -rf $GITHUB_WORKSPACE/* || true
+#
+#      - uses: actions/checkout@v4
+#        with:
+#          submodules: "recursive"
+#
+#      - name: Set up Python ${{ matrix.python-version }}
+#        uses: actions/setup-python@v5
+#        with:
+#          python-version: ${{ matrix.python-version }}
+#
+#      - name: Build wheel for Python ${{ matrix.python-version }} and CUDA ${{ matrix.cuda-version }}
+#        if: github.event_name != 'push' || (matrix.cuda-version != '12.4' && matrix.cuda-version != '12.8')
+#        run: |
+#          cd sgl-kernel
+#          chmod +x ./build.sh
+#          ./build.sh "${{ matrix.python-version }}" "${{ matrix.cuda-version }}"
 
       - name: Build wheel for Python ${{ matrix.python-version }} and CUDA ${{ matrix.cuda-version }}
-        if: github.event_name != 'push' || (matrix.cuda-version != '12.4' && matrix.cuda-version != '12.8')
         run: |
-          cd sgl-kernel
-          chmod +x ./build.sh
-          ./build.sh "${{ matrix.python-version }}" "${{ matrix.cuda-version }}"
+          mkdir -p sgl-kernel/dist/a.txt
+          echo hi > sgl-kernel/dist/a.txt
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -100,76 +106,77 @@ jobs:
           name: wheel-python${{ matrix.python-version }}-cuda${{ matrix.cuda-version }}
           path: sgl-kernel/dist/*
 
-  sgl-kernel-unit-test:
-    needs: [sgl-kernel-check-changes, sgl-kernel-build-wheels]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
-      github.event.pull_request.draft == false &&
-      needs.sgl-kernel-check-changes.outputs.src == 'true'
-    runs-on: 1-gpu-runner
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: sgl-kernel/dist/
-          merge-multiple: true
-          pattern: wheel-python3.10-cuda12.9
-
-      - name: Install
-        run: |
-          bash scripts/ci/ci_install_dependency.sh
-          pip3 install torch==2.8.0 torchvision torchaudio --index-url https://download.pytorch.org/whl/test/cu126 && pip3 install pytest
-          pip3 uninstall sgl-kernel -y || true
-          pip3 install sgl-kernel/dist/*whl --force-reinstall --no-deps
-          pip3 list | grep sgl-kernel
-
-      - name: Run test
-        timeout-minutes: 30
-        run: |
-          cd sgl-kernel
-          pytest tests/
-
-      - name: Uninstall dependencies
-        run: |
-          pip3 uninstall sgl-kernel -y
-
-  sgl-kernel-mla-test:
-    needs: [sgl-kernel-check-changes, sgl-kernel-build-wheels]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
-      github.event.pull_request.draft == false &&
-      needs.sgl-kernel-check-changes.outputs.src == 'true'
-    runs-on: 1-gpu-runner
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: sgl-kernel/dist/
-          merge-multiple: true
-          pattern: wheel-python3.10-cuda12.9
-
-      - name: Install
-        run: |
-          bash scripts/ci/ci_install_dependency.sh
-          pip3 install torch==2.8.0 torchvision torchaudio --index-url https://download.pytorch.org/whl/test/cu126
-          pip3 uninstall sgl-kernel -y || true
-          pip3 install sgl-kernel/dist/*whl --force-reinstall --no-deps
-          pip3 list | grep sgl-kernel
-
-      - name: Run test
-        timeout-minutes: 30
-        run: |
-          cd test/srt
-          python3 test_mla_deepseek_v3.py
-
-      - name: Uninstall dependencies
-        run: |
-          pip3 uninstall sgl-kernel -y
+#  sgl-kernel-unit-test:
+#    needs: [sgl-kernel-check-changes, sgl-kernel-build-wheels]
+#    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+#      github.event.pull_request.draft == false &&
+#      needs.sgl-kernel-check-changes.outputs.src == 'true'
+#    runs-on: 1-gpu-runner
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Download artifacts
+#        uses: actions/download-artifact@v4
+#        with:
+#          path: sgl-kernel/dist/
+#          merge-multiple: true
+#          pattern: wheel-python3.10-cuda12.9
+#
+#      - name: Install
+#        run: |
+#          bash scripts/ci/ci_install_dependency.sh
+#          pip3 install torch==2.8.0 torchvision torchaudio --index-url https://download.pytorch.org/whl/test/cu126 && pip3 install pytest
+#          pip3 uninstall sgl-kernel -y || true
+#          pip3 install sgl-kernel/dist/*whl --force-reinstall --no-deps
+#          pip3 list | grep sgl-kernel
+#
+#      - name: Run test
+#        timeout-minutes: 30
+#        run: |
+#          cd sgl-kernel
+#          pytest tests/
+#
+#      - name: Uninstall dependencies
+#        run: |
+#          pip3 uninstall sgl-kernel -y
+#
+#  sgl-kernel-mla-test:
+#    needs: [sgl-kernel-check-changes, sgl-kernel-build-wheels]
+#    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+#      github.event.pull_request.draft == false &&
+#      needs.sgl-kernel-check-changes.outputs.src == 'true'
+#    runs-on: 1-gpu-runner
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Download artifacts
+#        uses: actions/download-artifact@v4
+#        with:
+#          path: sgl-kernel/dist/
+#          merge-multiple: true
+#          pattern: wheel-python3.10-cuda12.9
+#
+#      - name: Install
+#        run: |
+#          bash scripts/ci/ci_install_dependency.sh
+#          pip3 install torch==2.8.0 torchvision torchaudio --index-url https://download.pytorch.org/whl/test/cu126
+#          pip3 uninstall sgl-kernel -y || true
+#          pip3 install sgl-kernel/dist/*whl --force-reinstall --no-deps
+#          pip3 list | grep sgl-kernel
+#
+#      - name: Run test
+#        timeout-minutes: 30
+#        run: |
+#          cd test/srt
+#          python3 test_mla_deepseek_v3.py
+#
+#      - name: Uninstall dependencies
+#        run: |
+#          pip3 uninstall sgl-kernel -y
 
   sgl-kernel-finish:
-    needs: [sgl-kernel-unit-test, sgl-kernel-mla-test, sgl-kernel-lint, sgl-kernel-build-wheels]
+#    needs: [sgl-kernel-unit-test, sgl-kernel-mla-test, sgl-kernel-lint, sgl-kernel-build-wheels]
+    needs: [sgl-kernel-lint, sgl-kernel-build-wheels]
     if: always()
     runs-on: ubuntu-latest
     steps:
