--- a/docker/Dockerfile.gb200
+++ b/docker/Dockerfile.gb200
@@ -39,6 +39,15 @@ RUN echo 'tzdata tzdata/Areas select America' | debconf-set-selections \
  && rm -rf /var/lib/apt/lists/* \
  && apt-get clean
 
+RUN apt update && apt install wget -y && apt install software-properties-common -y \
+  && add-apt-repository ppa:deadsnakes/ppa -y \
+   && apt install python3.12-full python3.12-dev python3.10-venv -y \
+  && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 1 \
+  && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.12 2 \
+  && update-alternatives --set python3 /usr/bin/python3.12 \
+  && wget https://bootstrap.pypa.io/get-pip.py \
+  && python3 get-pip.py
+
 # Install SGLang missing package for blackwell build type
 RUN python3 -m pip install openai httpx
 
