--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -44,8 +44,9 @@ runtime_common = [
     "pynvml",
     "python-multipart",
     "pyzmq>=25.1.2",
-    "soundfile==0.13.1",
     "scipy",
+    "sentencepiece",
+    "soundfile==0.13.1",
     "timm==1.0.16",
     "tiktoken",
     "torchao==0.9.0",
