--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -228,7 +228,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        if: needs.check-changes.outputs.src == 'true'
+        if: needs.sgl-kernel-check-changes.outputs.src == 'true'
         uses: actions/download-artifact@v4
         with:
           path: sgl-kernel/dist/
@@ -260,7 +260,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        if: needs.check-changes.outputs.src == 'true'
+        if: needs.sgl-kernel-check-changes.outputs.src == 'true'
         uses: actions/download-artifact@v4
         with:
           path: sgl-kernel/dist/
@@ -292,7 +292,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        if: needs.check-changes.outputs.src == 'true'
+        if: needs.sgl-kernel-check-changes.outputs.src == 'true'
         uses: actions/download-artifact@v4
         with:
           path: sgl-kernel/dist/
@@ -324,7 +324,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        if: needs.check-changes.outputs.src == 'true'
+        if: needs.sgl-kernel-check-changes.outputs.src == 'true'
         uses: actions/download-artifact@v4
         with:
           path: sgl-kernel/dist/
@@ -356,7 +356,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        if: needs.check-changes.outputs.src == 'true'
+        if: needs.sgl-kernel-check-changes.outputs.src == 'true'
         uses: actions/download-artifact@v4
         with:
           path: sgl-kernel/dist/
@@ -384,7 +384,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        if: needs.check-changes.outputs.src == 'true'
+        if: needs.sgl-kernel-check-changes.outputs.src == 'true'
         uses: actions/download-artifact@v4
         with:
           path: sgl-kernel/dist/
@@ -444,7 +444,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        if: needs.check-changes.outputs.src == 'true'
+        if: needs.sgl-kernel-check-changes.outputs.src == 'true'
         uses: actions/download-artifact@v4
         with:
           path: sgl-kernel/dist/
@@ -496,7 +496,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        if: needs.check-changes.outputs.src == 'true'
+        if: needs.sgl-kernel-check-changes.outputs.src == 'true'
         uses: actions/download-artifact@v4
         with:
           path: sgl-kernel/dist/
@@ -554,7 +554,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        if: needs.check-changes.outputs.src == 'true'
+        if: needs.sgl-kernel-check-changes.outputs.src == 'true'
         uses: actions/download-artifact@v4
         with:
           path: sgl-kernel/dist/
@@ -585,7 +585,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        if: needs.check-changes.outputs.src == 'true'
+        if: needs.sgl-kernel-check-changes.outputs.src == 'true'
         uses: actions/download-artifact@v4
         with:
           path: sgl-kernel/dist/
@@ -616,7 +616,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        if: needs.check-changes.outputs.src == 'true'
+        if: needs.sgl-kernel-check-changes.outputs.src == 'true'
         uses: actions/download-artifact@v4
         with:
           path: sgl-kernel/dist/
@@ -644,7 +644,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        if: needs.check-changes.outputs.src == 'true'
+        if: needs.sgl-kernel-check-changes.outputs.src == 'true'
         uses: actions/download-artifact@v4
         with:
           path: sgl-kernel/dist/
@@ -674,7 +674,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download artifacts
-        if: needs.check-changes.outputs.src == 'true'
+        if: needs.sgl-kernel-check-changes.outputs.src == 'true'
         uses: actions/download-artifact@v4
         with:
           path: sgl-kernel/dist/
