--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -219,7 +219,8 @@ jobs:
 
   unit-test-frontend:
     needs: [check-changes, sgl-kernel-check-changes, sgl-kernel-finish]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+    if: always() && !failure() && !cancelled() &&
+        (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false &&
         needs.check-changes.outputs.src == 'true'
     runs-on: 1-gpu-runner
