--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -248,7 +248,8 @@ jobs:
 
   unit-test-backend-1-gpu:
     needs: [check-changes, unit-test-frontend, sgl-kernel-check-changes, sgl-kernel-finish]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+    if: always() && !failure() && !cancelled() &&
+        (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false &&
         needs.check-changes.outputs.src == 'true'
     runs-on: 1-gpu-runner
@@ -280,7 +281,8 @@ jobs:
 
   unit-test-backend-2-gpu:
     needs: [check-changes, sgl-kernel-check-changes, sgl-kernel-finish]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+    if: always() && !failure() && !cancelled() &&
+        (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false &&
         needs.check-changes.outputs.src == 'true'
     runs-on: 2-gpu-runner
@@ -312,7 +314,8 @@ jobs:
 
   unit-test-backend-4-gpu:
     needs: [check-changes, unit-test-backend-2-gpu, sgl-kernel-check-changes, sgl-kernel-finish]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+    if: always() && !failure() && !cancelled() &&
+        (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false &&
         needs.check-changes.outputs.src == 'true'
     runs-on: 4-gpu-runner
@@ -344,7 +347,8 @@ jobs:
 
   unit-test-backend-8-gpu:
     needs: [check-changes, unit-test-backend-2-gpu, sgl-kernel-check-changes, sgl-kernel-finish]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+    if: always() && !failure() && !cancelled() &&
+        (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false &&
         needs.check-changes.outputs.src == 'true'
     runs-on: 8-gpu-runner
@@ -376,7 +380,8 @@ jobs:
 
   performance-test-1-gpu-part-1:
     needs: [check-changes, sgl-kernel-check-changes, sgl-kernel-finish]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+    if: always() && !failure() && !cancelled() &&
+        (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false &&
         needs.check-changes.outputs.src == 'true'
     runs-on: 1-gpu-runner
@@ -436,7 +441,8 @@ jobs:
 
   performance-test-1-gpu-part-2:
     needs: [check-changes, sgl-kernel-check-changes, sgl-kernel-finish]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+    if: always() && !failure() && !cancelled() &&
+        (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false &&
         needs.check-changes.outputs.src == 'true'
     runs-on: 1-gpu-runner
@@ -488,7 +494,8 @@ jobs:
 
   performance-test-2-gpu:
     needs: [check-changes, unit-test-backend-2-gpu, sgl-kernel-check-changes, sgl-kernel-finish]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+    if: always() && !failure() && !cancelled() &&
+        (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false &&
         needs.check-changes.outputs.src == 'true'
     runs-on: 2-gpu-runner
@@ -546,7 +553,8 @@ jobs:
 
   accuracy-test-1-gpu:
     needs: [check-changes, sgl-kernel-check-changes, sgl-kernel-finish]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+    if: always() && !failure() && !cancelled() &&
+        (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false &&
         needs.check-changes.outputs.src == 'true'
     runs-on: 1-gpu-runner
@@ -577,7 +585,8 @@ jobs:
 
   accuracy-test-2-gpu:
     needs: [check-changes, accuracy-test-1-gpu, sgl-kernel-check-changes, sgl-kernel-finish]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+    if: always() && !failure() && !cancelled() &&
+        (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false &&
         needs.check-changes.outputs.src == 'true'
     runs-on: 2-gpu-runner
@@ -608,7 +617,8 @@ jobs:
 
   unit-test-deepep-4-gpu:
     needs: [check-changes, unit-test-backend-2-gpu, sgl-kernel-check-changes, sgl-kernel-finish]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+    if: always() && !failure() && !cancelled() &&
+        (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false &&
         needs.check-changes.outputs.src == 'true'
     runs-on: 4-gpu-runner
@@ -636,7 +646,8 @@ jobs:
 
   unit-test-deepep-8-gpu:
     needs: [check-changes, unit-test-backend-2-gpu, sgl-kernel-check-changes, sgl-kernel-finish]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+    if: always() && !failure() && !cancelled() &&
+        (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false &&
         needs.check-changes.outputs.src == 'true'
     runs-on: 8-gpu-runner
@@ -664,7 +675,8 @@ jobs:
 
   unit-test-backend-8-gpu-b200:
     needs: [check-changes, unit-test-backend-2-gpu, sgl-kernel-check-changes, sgl-kernel-finish]
-    if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
+    if: always() && !failure() && !cancelled() &&
+      (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
       github.event.pull_request.draft == false &&
       needs.check-changes.outputs.src == 'true'
     runs-on: b200-runner
